[package]
name = "chasmic"
version = "0.1.0"
authors = ["jskjott <jonathan@jskjott.com>"]
description = "A tool to track the ideas on top of your head."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
clap = "2.33.0"
dirs = "2.0.2"
open = "1.3.2"